--- a/templates/user/borrow_water.html
+++ b/templates/user/borrow_water.html
@@ -56,7 +56,7 @@
                     </p>
                 </div>
                 
-                <form action="{{ url_for('borrow_water_ui') }}" method="post" class="mt-4">
+                <form action="{{ url_for('borrow_water') }}" method="post" class="mt-4">
                     <div class="mb-4">
                         <label for="amount" class="block text-gray-700 text-sm font-bold mb-2">Amount to Borrow (cubic meters)</label>
                         <div class="relative">
