--- a/templates/isp/recharge.html
+++ b/templates/isp/recharge.html
@@ -19,7 +19,7 @@
         <div class="p-6">
             <div class="flex items-center justify-between mb-6">
                 <h2 class="text-2xl font-bold text-gray-800">Water Recharge</h2>
-                <img src="{{ url_for('static', filename='images/mtn-logo.png') }}" alt="MTN Logo" class="h-8">
+                <img src="{{ url_for('static', filename='images/mtn-logo.png') }}" alt="MTN Logo" class="w-[100px]">
             </div>
 
             <form action="{{ url_for('isp_recharge') }}" method="POST" class="space-y-6">
