--- a/templates/auth/forgot_password.html
+++ b/templates/auth/forgot_password.html
@@ -9,7 +9,7 @@
                 Forgot your password?
             </h2>
             <p class="mt-2 text-center text-sm text-gray-600">
-                Enter your email address and we'll send you a link to reset your password.
+                Enter your email address and we'll remaind you your password.
             </p>
         </div>
 
@@ -64,7 +64,7 @@
                             <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
                         </svg>
                     </span>
-                    Send Reset Link
+                    Send Password
                 </button>
             </div>
 
